make link relative

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<br/>
 	To solve this I have collected a list of about 5k symbols and mapped them to companies and their ISIN. All in a simple parseable json.
 	<br/>
-	<a href="https://github.com/sw-fox/stock-symbols/blob/main/companies.json">Link to json</a>
+	<a href="companies.json">Link to json</a>
 	<br/>
 	</article>
 	<article id="example">
