--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>sw-fox / stock-symbols</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
+	<meta charset="utf-8">
+	<meta name="description" content="Documentation of a ISIN to stock symbol mapping" />
+	<meta name="keywords" content="finance, stock, symbols, yahoo-finance, isin, mapping" />
   </head>
   <body>
     <header>
