--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="description" content="Documentation of a ISIN to stock symbol mapping" />
 	<meta name="keywords" content="finance, stock, symbols, yahoo-finance, isin, mapping" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
   </head>
   <body>
     <header>
